# telepa3on

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/codex-tasks/: issue-13.md
docs/: issue-1-operability-task.md  issue-18-task.md  issue-6-task.md  issue-7-task.md
migrations/: 001_initial.sql  002_owner_chat_routing.sql  003_debug_last_events.sql
src/telepa3on/: __init__.py  app.py  bot.py  cli.py  config.py  handlers.py  learning.py  migrate.py  openai_client.py  poller.py  repository.py  telegram.py
tests/: test_bot.py  test_handlers.py  test_poller.py  test_telegram.py
