[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telepa3on"
version = "0.1.0"
description = "A small async Telegram echo bot scaffold built on Telethon."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["telethon>=1.41,<2"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
telepa3on = "telepa3on.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telepa3on"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
