[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telepa3on"
version = "0.1.0"
description = "Telegram Business Chat Automation MVP using the official Bot API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.4,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
telepa3on = "telepa3on.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telepa3on"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
